Update CORS configuration in API Gateway
- Restrict allowed origins from all patterns (`*`) to `http://localhost:3000`.
- Update `SecurityConfig.java` to use `setAllowedOrigins` with a specific origin list instead of `setAllowedOriginPatterns`.